Inclusao de mensagem sincrona para envio de operacoes ao servico de contas

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ContasService": "http://localhost:6000/api/cs/operacoes/"
+  "ContasService": "http://contas-clusterip-srv:80/api/cs/operacoes/"
 }
